tests/expectations/parser/functions/mode_outside_tuple.out
Error [EPAR0370009]: unexpected string: expected 'identifier', found '('
    --> test:3:15
     |
   3 |     transition(a: u8) -> public (u8, u8) {
     |               ^